@@ -10,6 +10,17 @@ Summary of important user-visible changes for version 4.0:
 
     is now enabled by default.
 
+ ** The preference
+
+      allow_noninteger_range_as_index
+
+    is now enabled by default and the warning ID
+
+      Octave:noninteger-range-as-index
+
+    is now set to "on" by default instead of "error" by default and "on"
+    for --traditional.
+
  ** Other new functions added in 4.0.0:
 
     validateattributes
@@ -29,6 +40,7 @@ Summary of important user-visible changes for version 4.0:
     be removed from Octave 4.4 (or whatever version is the second major
     release after 4.0):
 
+      allow_noninteger_range_as_index
       do_braindead_shortcircuit_evaluation
 
 ---------------------------------------------------------
